# mr-api

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  LICENSE.md  Makefile  README.md  cloudbuild.yaml  docker-compose.cert.yaml  docker-compose.mr-mindat.yaml  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  init-letsencrypt.sh  makefile  manage.py  master.session.sql  migrate_run_sql.py  pyproject.toml  requirements.txt  setup.cfg  vetur.config.js
.deploy/: deploy.sh
.envs/.local/: .backend  .db  .nginx
.github/: dependabot.yaml
.github/workflows/: main.yml  main_droplet.yml
.services/: post-renew.sh
.services/.deploy/: deploy.sh
.services/crontab/: config
api/: admin.py  models.py  views.py
api/migrations/: 0001_initial.py  0004_auto_20201111_2042.py  0007_msnamesperson_nationalitieslist.py  0008_languageslist_msnameslanguage.py  0009_auto_20201228_2021.py  0010_auto_20201229_1730.py  0011_auto_20210129_1806.py  0012_adjust_db.py  0013_nuxttabs.py
api/stats/: urls.py  views.py
db/: 01-init.sh
db/maintenance/: backup  backups  restore
gpminerals/: asgi.py  settings.py  urls.py  wsgi.py
k8s/: ingress.yaml  ingress_nginx_svc.yaml  service.yaml
kubernetes/: deployment.yaml
mr-django/: asgi.py  settings.py  urls.py  wsgi.py
mrdjango/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: Dockerfile
search_indexes/: documents.py  views.py
src/: asgi.py  locustfile.py  manage.py  urls.py  wsgi.py
web/: urls.py  views.py
(+194 files in other folders)
