[project]
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120
cache-dir = "~/.cache/ruff"

[tool.ruff.lint]
select = ['C', 'E', 'F', 'W', 'B', 'I']
ignore = ['E203', 'E501', 'F841']

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"src/settings/*" = ['F405', 'F403']
"src/manage.py" = ['F401']
